--- a/table.html
+++ b/table.html
@@ -3,103 +3,99 @@
 <head>
 <style>
 table {
-  width: 100%;
-  border-collapse: collapse;
+  width:100%;
+  border-collapse:collapse;
 }
-
-table, th, td {
-  border: 1px solid black;
-}
-
 th, td {
-  padding: 8px;
-  text-align: left;
-}
-
-th {
-  background-color: #f2f2f2;
+  border:1px solid black;
+  padding:8px;
+  text-align:left;
 }
 </style>
 </head>
 <body>
 
 <h2>2024-2025年度第二学期 机械科学与工程学院</h2>
-<p>余文勇（2024010004）副教授 课程课表</p>
+<p>余文勇（2004010004）副教授 课堂课表</p>
 
 <table>
   <tr>
-    <th rowspan="2">课程名称</th>
-    <th rowspan="2">课程代码</th>
-    <th rowspan="2">课堂名称</th>
-    <th rowspan="2">组织单位</th>
-    <th rowspan="2">成绩录入系统</th>
-    <th rowspan="2">课堂负责人</th>
-    <th rowspan="2">星期</th>
-    <th rowspan="2">节次</th>
-    <th rowspan="2">周次</th>
-    <th rowspan="2">教室</th>
-    <th rowspan="2">任课教师</th>
-    <th rowspan="2">学时数</th>
-    <th rowspan="2">学生数</th>
+    <th>课程名称</th>
+    <th>课程代码</th>
+    <th>课堂名称</th>
+    <th>班级名称</th>
+    <th>成绩录入院系</th>
+    <th>课堂负责人</th>
+    <th>星期</th>
+    <th>节次</th>
+    <th>周次</th>
+    <th>教室</th>
+    <th>任课教师</th>
+    <th>学时数</th>
+    <th>学生数</th>
   </tr>
   <tr>
-  </tr>
-  <tr>
-    <td rowspan="3">计算机网络技术及应用</td>
-    <td rowspan="3">MF09F56H1</td>
-    <td rowspan="3">轮机2401～2</td>
-    <td rowspan="3">船舶与海洋工程202103班</td>
-    <td rowspan="3">船舶与海洋工程202203班</td>
-    <td rowspan="3">机械科学与工程学院</td>
-    <td rowspan="3">余文勇</td>
+    <td>计算机网络技术及应用</td>
+    <td>MESSE361</td>
+    <td>轮机2401-2</td>
+    <td>船舶与海洋工程202103班<br>船舶与海洋工程202202班<br>船舶与海洋工程202302班<br>轮机工程202401班<br>轮机工程202402班</td>
+    <td>机械科学与工程学院</td>
+    <td>余文勇</td>
     <td>星期一</td>
-    <td>5 - 6</td>
-    <td>1 - 6</td>
+    <td>5 ～ 6</td>
+    <td>1 ～ 6</td>
     <td>东九楼D406</td>
-    <td>余文勇 (副教授)</td>
+    <td>余文勇（副教授）</td>
     <td>12</td>
     <td>42</td>
   </tr>
   <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
     <td>星期三</td>
-    <td>3 - 4</td>
-    <td>1 - 6</td>
+    <td>3 ～ 4</td>
+    <td>1 ～ 6</td>
     <td>东九楼D406</td>
-    <td>余文勇 (副教授)</td>
+    <td>余文勇（副教授）</td>
     <td>12</td>
     <td>42</td>
   </tr>
   <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
     <td>星期四</td>
-    <td>9 - 12</td>
-    <td>2 - 3</td>
-    <td>计算机开放实验室(工程实践创新中心A区)</td>
-    <td>余文勇 (副教授)</td>
+    <td>9 ～ 12</td>
+    <td>3 ～ 3</td>
+    <td>计算机开放实验室（工程实践创新中心A座）</td>
+    <td>余文勇（副教授）</td>
     <td>4</td>
     <td>42</td>
   </tr>
   <tr>
-    <td rowspan="2">计算机网络技术及应用</td>
-    <td rowspan="2">MF09F56H1</td>
-    <td rowspan="2">机类2401～2</td>
-    <td rowspan="2">船舶与海洋工程202103班</td>
-    <td rowspan="2">船舶与海洋工程202203班</td>
-    <td rowspan="2">机械科学与工程学院</td>
-    <td rowspan="2">余文勇</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
     <td>星期四</td>
-    <td>9 - 12</td>
-    <td>5 - 5</td>
-    <td>计算机开放实验室(工程实践创新中心A区)</td>
-    <td>余文勇 (副教授)</td>
+    <td>9 ～ 12</td>
+    <td>5 ～ 5</td>
+    <td>计算机开放实验室（工程实践创新中心A座）</td>
+    <td>余文勇（副教授）</td>
     <td>4</td>
     <td>42</td>
   </tr>
   <tr>
-    <td>合计</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
+    <td colspan="11">合计</td>
     <td>32</td>
     <td>42</td>
   </tr>
