--- a/table.html
+++ b/table.html
@@ -35,12 +35,12 @@ th, td {
     <th>学生数</th>
   </tr>
   <tr>
-    <td>计算机网络技术及应用</td>
-    <td>MESSE361</td>
-    <td>轮机2401-2</td>
-    <td>船舶与海洋工程202103班<br>船舶与海洋工程202202班<br>船舶与海洋工程202302班<br>轮机工程202401班<br>轮机工程202402班</td>
-    <td>机械科学与工程学院</td>
-    <td>余文勇</td>
+    <td><th rowspan=4>计算机网络技术及应用</td>
+    <td><th rowspan=4>MESSE361</td>
+    <td><th rowspan=4>轮机2401-2</td>
+    <td><th rowspan=4>船舶与海洋工程202103班<br>船舶与海洋工程202202班<br>船舶与海洋工程202302班<br>轮机工程202401班<br>轮机工程202402班</td>
+    <td><th rowspan=4>机械科学与工程学院</td>
+    <td><th rowspan=4>余文勇</td>
     <td>星期一</td>
     <td>5 ～ 6</td>
     <td>1 ～ 6</td>
