--- a/table.html
+++ b/table.html
@@ -1,31 +1,14 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table {
-  width:100%;
-  border-collapse:collapse;
-}
-th, td {
-  border:1px solid black;
-  padding:8px;
-  text-align:left;
-}
-</style>
-</head>
-<body>
-
-<h2>2024-2025年度第二学期 机械科学与工程学院</h2>
-<p>余文勇（2004010004）副教授 课堂课表</p>
-
-<table>
+<table border="1">
   <tr>
-    <th>课程名称</th>
-    <th>课程代码</th>
-    <th>课堂名称</th>
-    <th>班级名称</th>
-    <th>成绩录入院系</th>
-    <th>课堂负责人</th>
+    <th rowspan="2">课程名称</th>
+    <th rowspan="2">课程代码</th>
+    <th rowspan="2">课堂名称</th>
+    <th rowspan="2">班级名称</th>
+    <th rowspan="2">成绩录入院系</th>
+    <th rowspan="2">课堂负责人</th>
+    <th colspan="6">2024-2025年度第二学期 机械科学与工程学院</th>
+  </tr>
+  <tr>
     <th>星期</th>
     <th>节次</th>
     <th>周次</th>
@@ -35,12 +18,12 @@ th, td {
     <th>学生数</th>
   </tr>
   <tr>
-    <td><th rowspan=4>计算机网络技术及应用</td>
-    <td><th rowspan=4>MESSE361</td>
-    <td><th rowspan=4>轮机2401-2</td>
-    <td><th rowspan=4>船舶与海洋工程202103班<br>船舶与海洋工程202202班<br>船舶与海洋工程202302班<br>轮机工程202401班<br>轮机工程202402班</td>
-    <td><th rowspan=4>机械科学与工程学院</td>
-    <td><th rowspan=4>余文勇</td>
+    <td>计算机网络技术及应用</td>
+    <td>MESSE361</td>
+    <td>轮机2401-2</td>
+    <td rowspan="5">船舶与海洋工程202103班<br>船舶与海洋工程202202班<br>船舶与海洋工程202302班<br>轮机工程202401班<br>轮机工程202402班</td>
+    <td>机械科学与工程学院</td>
+    <td>余文勇</td>
     <td>星期一</td>
     <td>5 ～ 6</td>
     <td>1 ～ 6</td>
@@ -50,7 +33,6 @@ th, td {
     <td>42</td>
   </tr>
   <tr>
-    <td></td>
     <td></td>
     <td></td>
     <td></td>
@@ -70,17 +52,15 @@ th, td {
     <td></td>
     <td></td>
     <td></td>
-    <td></td>
     <td>星期四</td>
     <td>9 ～ 12</td>
-    <td>3 ～ 3</td>
+    <td>3 ～ 5</td>
     <td>计算机开放实验室（工程实践创新中心A座）</td>
     <td>余文勇（副教授）</td>
     <td>4</td>
     <td>42</td>
   </tr>
   <tr>
-    <td></td>
     <td></td>
     <td></td>
     <td></td>
@@ -95,11 +75,18 @@ th, td {
     <td>42</td>
   </tr>
   <tr>
-    <td colspan="11">合计</td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td>合计</td>
     <td>32</td>
     <td>42</td>
   </tr>
 </table>
-
-</body>
-</html>
