--- a/table.html
+++ b/table.html
@@ -1,28 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-td, th {
-  border: 1px solid #ddd;
-  padding: 8px;
-}
-
-th {
-  background-color: #f2f2f2;
-}
-</style>
-</head>
-<body>
-
-<h2>2024-2025年度第二学期 机械科学与工程学院</h2>
-<p>余文勇（2004010004）副教授 课堂课表</p>
-
-<table>
+<table border="1">
   <tr>
     <th rowspan="2">课程名称</th>
     <th rowspan="2">课程代码</th>
@@ -30,45 +6,54 @@ th {
     <th rowspan="2">班级名称</th>
     <th rowspan="2">成绩录入院系</th>
     <th rowspan="2">课堂负责人</th>
-    <th colspan="6">星期</th>
+    <th colspan="4">星期</th>
+    <th rowspan="2">教室</th>
+    <th rowspan="2">任课教师</th>
+    <th rowspan="2">课时数</th>
     <th rowspan="2">学生数</th>
   </tr>
   <tr>
     <th>星期一</th>
-    <th>星期二</th>
     <th>星期三</th>
     <th>星期四</th>
-    <th>星期五</th>
-    <th>星期六</th>
+    <th>星期四</th>
   </tr>
   <tr>
     <td>计算机网络技术及应用</td>
-    <td>MESSE361</td>
+    <td>MES5361</td>
     <td>轮机2401-2</td>
-    <td>船舶与海洋工程202103班<br>船舶与海洋工程202202班<br>船舶与海洋工程202302班<br>轮机工程202401班<br>轮机工程202402班</td>
+    <td rowspan="5">船舶与海洋工程202103班<br>船舶与海洋工程202202班<br>船舶与海洋工程202302班<br>轮机工程202401班<br>轮机工程202402班</td>
     <td>机械科学与工程学院</td>
     <td>余文勇</td>
-    <td rowspan="5">5～6</td>
-    <td></td>
-    <td rowspan="2">3～4</td>
-    <td rowspan="3">9～12</td>
-    <td rowspan="2">9～12</td>
-    <td></td>
-    <td>42</td>
+    <td rowspan="2">5 ～ 6</td>
+    <td rowspan="2">1 ～ 6</td>
+    <td rowspan="2">东九楼D406</td>
+    <td rowspan="2">余文勇（副教授）</td>
+    <td rowspan="2">12</td>
+    <td rowspan="5">42</td>
   </tr>
   <tr>
     <td></td>
     <td></td>
     <td></td>
+    <td>3 ～ 4</td>
+    <td>1 ～ 6</td>
+  </tr>
+  <tr>
     <td></td>
     <td></td>
     <td></td>
-    <td>东九楼D406</td>
-    <td>东九楼D406</td>
+    <td rowspan="2">9 ～ 12</td>
+    <td>3 ～ 3</td>
     <td>计算机开放实验室（工程实践创新中心A座）</td>
+    <td rowspan="2">4</td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+    <td></td>
+    <td>5 ～ 5</td>
     <td>计算机开放实验室（工程实践创新中心A座）</td>
-    <td></td>
-    <td>42</td>
   </tr>
   <tr>
     <td></td>
@@ -76,48 +61,7 @@ th {
     <td></td>
     <td></td>
     <td></td>
-    <td></td>
-    <td>余文勇（副教授）</td>
-    <td>余文勇（副教授）</td>
-    <td>余文勇（副教授）</td>
-    <td>余文勇（副教授）</td>
-    <td></td>
-    <td>42</td>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td>12</td>
-    <td>12</td>
-    <td>4</td>
-    <td>4</td>
-    <td></td>
-    <td>42</td>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td>1～6</td>
-    <td>1～6</td>
-    <td>3～3</td>
-    <td>5～5</td>
-    <td></td>
-    <td>42</td>
-  </tr>
-  <tr>
-    <td colspan="7">合计</td>
-    <td colspan="6">32</td>
-    <td>42</td>
+    <td>合计</td>
+    <td>32</td>
   </tr>
 </table>
-
-</body>
-</html>
